--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "description": "one cli for create project",
   "main": "./bin/index.js",
+  "keywords": [
+    "cli",
+    "npm",
+    "vite",
+    "vue3"
+  ],
   "bin": {
     "krkr": "./bin/index.js"
   },
